feat: add rest endpoints for functionality
Added new controllers and openapi descriptions
